--- a/packages.yaml
+++ b/packages.yaml
@@ -1,11 +1,11 @@
 ---
-- name: Install Packages
-  hosts: localhost
-  tasks: 
-    - name: install vim curl wget
-      yum: 
-        state: installed
-        name: 
-          - vim 
-          - curl
-          - wget
+ - name: Install packages
+   hosts: all
+   tasks: 
+     - name: install vim curl wget
+       yum: 
+         state: installed
+         name: 
+           - vim 
+           - curl
+           - wget
